				- reserve sorting of global process group
				  definitions

5.4.4
	- updated version of internal OTF to 1.3.9 (see extlib/otf/ChangeLog)
	- fixed a portability bug: use own implementation of function
	  'strdup()'
	- removed variadic macros (they were introduced in C99)
	- fixed potential race condition by using OpenMP + LIBC's I/O tracing
	- fixed potential missing definition records by using OpenMP and the
	  maximum number of buffer flushes was reached
	- fixed a bug in the compiler wrappers: added check for SUN's OpenMP
	  compiler flag (-xopenmp)
	- fixed a bug for determining the timer-resolution for ITC
	- added process group definition for MPI communicator MPI_COMM_SELF
	- cleanup call stack when maximum number of flushes was reached
	- added check if we can link '-lz' in order to pass either '-lotf -lz'
	  or just '-lotf' as OTF link option
	- renamed configure's option '--with[out]-mpi-io' to
	  '[enable/disable]-mpi-io' for more consistent

5.4.5
	- updated version of internal OTF to 1.3.10 (see extlib/otf/ChangeLog)
	- fixed a bug for LIBC's I/O tracing: argument of 'fileno()' must be
	  a valid file stream
	- added configure option '--[enable|disable]-binaries' to control
	  building of binaries (useful for multi-lib installations)

5.4.6
	- updated version of internal OTF to 1.3.11 (see extlib/otf/ChangeLog)
	- added support for Cray CNL
	- added support for automatic instrumentation by using Pathscale
	  compiler (version 3.1 or higher required)
	- fixed a bug in vtfilter where the tool dies when a counter appears
	  outside of function
	- fixed faulty shell comparison in configure which may cause an	infinite
	  loop
	- bugfix: added configure check for I/O functions functions 'fseeko()'
	  (this function is not available on NEC SX platforms)
	- enhancement to OPARI (see tools/opari/ChangeLog:14,15)

5.4.7
	- fixed faulty timer selection in configure
	  (the cycle counter timer is not available on all Linux platforms)
