@@ -229,4 +229,7 @@
 5.4.7
 	- fixed faulty timer selection in configure
 	  (the cycle counter timer is not available on all Linux platforms)
+	- added configure check for header file 'asm/intrinsics.h' and
+	  definition of '_IA64_REG_AR_ITC' which are required to use the
+	  ITC timer on IA64/Linux
 
